fixing overflow

--- a/src/components/PatientGrid/Row/Row.module.css
+++ b/src/components/PatientGrid/Row/Row.module.css
@@ -80,6 +80,7 @@
   column-gap: 13px;
   flex-wrap: wrap;
   margin: 0 0 0 -10px;
+  overflow: hidden;
 }
 
 .ExpandedRowColumn {
