--- a/src/components/VolunteerApprovalGrid/Row/Row.module.css
+++ b/src/components/VolunteerApprovalGrid/Row/Row.module.css
@@ -41,6 +41,7 @@
   column-gap: 30px;
   flex-wrap: wrap;
   margin: 0 0 0 -10px;
+  overflow: hidden;
 }
 
 .ExpandedRowColumn {
