--- a/src/components/VolunteerGrid/Row/Row.module.css
+++ b/src/components/VolunteerGrid/Row/Row.module.css
@@ -51,6 +51,8 @@
   column-gap: 30px;
   flex-wrap: wrap;
   margin: 0 0 0 -10px;
+  padding-left: 10px;
+  overflow: hidden;
 }
 
 .ExpandedRowColumn {
